refactor: BinaryContentService 응답을 DTO로 변경
- message service의 delete 메서드 파라미터 오류 수정
- ResponseBinaryContentDto의 from 메소드 static으로 수정