@@ -1,6 +1,7 @@
 package com.sprint.mission.discodeit.service.basic;
 
 import com.sprint.mission.discodeit.dto.binaryContent.CreateBinaryContentDto;
+import com.sprint.mission.discodeit.dto.binaryContent.ResponseBinaryContentDto;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.service.BinaryContentService;
@@ -16,18 +17,21 @@ public class BasicBinaryContentService implements BinaryContentService {
     private final BinaryContentRepository binaryContentRepository;
 
     @Override
-    public BinaryContent create(CreateBinaryContentDto content) {
-        return binaryContentRepository.save(content);
+    public ResponseBinaryContentDto create(CreateBinaryContentDto content) {
+        BinaryContent binaryContent = binaryContentRepository.save(content);
+        return ResponseBinaryContentDto.from(binaryContent);
     }
 
     @Override
-    public BinaryContent findById(String contentId) {
-        return binaryContentRepository.findById(contentId);
+    public ResponseBinaryContentDto findById(String contentId) {
+        return ResponseBinaryContentDto.from(binaryContentRepository.findById(contentId));
     }
 
     @Override
-    public List<BinaryContent> findAllByIdIn(List<String> contentIds) {
-        return binaryContentRepository.findAll().stream().filter(binaryContent -> contentIds.contains(binaryContent.getId())).collect(Collectors.toList());
+    public List<ResponseBinaryContentDto> findAllByIdIn(List<String> contentIds) {
+        List<BinaryContent> list = binaryContentRepository.findAll().stream().filter(binaryContent -> contentIds.contains(binaryContent.getId())).toList();
+        List<ResponseBinaryContentDto> result = list.stream().map(ResponseBinaryContentDto::from).toList();
+        return result;
     }
 
     @Override
